
Fixed bugs:
-----------
* Translate task does not remove tokens when a key is not found.  
  It logs a verbose message.  Bugzilla Report 13936.

* Fix spurious infinite loop detection for filters (introduced in ant 1.6.0).
  Bugzilla Report 23154.

* Fix handling of default ant namespace for nested elements.

* Fix jboss element of ejb task (introduced in ant 1.6.0).

Other changes:
--------------
* Translate task logs a debug message specifying the number of files
  that it processed.  Bugzilla Report 13938.

* Enable to choose the regexp implementation without system property.
  Bugzilla Report 15390.
  
* <nice> task lets you set the priority of the current thread; non-forking 
  <java> code will inherit this priority in their main thread. 

* <touch> has filelist support. 

* <fixcrlf> has a new attribute - fixlast. Bugzilla Report 23262.

Changes from Ant 1.5.4 to Ant 1.6
=================================

Changes that could break older environments:
--------------------------------------------

* This version of Ant can not be built with JDK 1.1 and requires at
  least Java 1.2 at runtime as well.  Compiling for a 1.1 target is
  still supported.

* Targets cannot have the empty string as their name any longer.

* ant.jar's manifest does no longer include a Class-Path entry, so it
  is no longer possible to run Ant via "java -jar ant.jar" without
  manually altering the CLASSPATH.  Instead of that a file
  ant-bootstrap.jar is included in the etc directory of the binary
  distribution, copy this to the lib directory and use
  "java -jar ant-bootstrap.jar" instead if you want to run Ant without
  the wrapper script (not recommended).

* The <script> task now requires Apache BSF instead of the older IBM
  version.  See <http://jakarta.apache.org/bsf/>

* <xmlproperty> will no longer fail if the file to be loaded doesn't exist.

* XML namespaces are now enabled in the XML parser, meaning XML namespace