@@ -16,6 +16,8 @@ Fixed bugs:
 
 * Fix jboss element of ejb task (introduced in ant 1.6.0).
 
+* <whichresource> failed to load classes correctly.
+
 Other changes:
 --------------
 * Translate task logs a debug message specifying the number of files
